<resources>
    <string name="app_name">Contacts</string>
    <string name="add_new_contact">Add new contact</string>
    <string name="name">Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="signupText">Sign up to view your contacts</string>
    <string name="signup">Sign up</string>
    <string name="signupTextLogin"><u>Have an account already? Login</u>.</string>
</resources>